[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhtf"
version = "0.1.0"
description = "A lightweight hardware test framework inspired by OpenHTF, but with fewer dependencies."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name="Brandon Wallace", email="brandon.wallace@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
